crates/stc_ts_file_analyzer/tests/pass/exprs/typeGuards/typeGuardOfFromPropNameInUnionType/1.ts
class A { a: string; }
class B { b: number; }

export function namedClasses(x: A | B) {
    if ("a" in x) {
        x.a = "1";
    } else {
        x.b = 1;
    }
}
